--- a/public/form-placeholder.html
+++ b/public/form-placeholder.html
@@ -1,9 +1,11 @@
-<!--
-  This file helps Netlify detect the contact form during build.
-  It's not visible to users - just needed for form detection.
--->
-<form name="contact" netlify netlify-honeypot="bot-field" hidden>
-  <input type="text" name="name" />
-  <input type="email" name="email" />
-  <textarea name="message"></textarea>
-</form>
+<!DOCTYPE html>
+<html>
+<head><title>Form</title></head>
+<body>
+  <form name="contact" method="POST" data-netlify="true" action="/success.html">
+    <input type="text" name="name" />
+    <input type="email" name="email" />
+    <textarea name="message"></textarea>
+  </form>
+</body>
+</html>
